--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.gitignore.io/api/python,vagrant
 # Edit at https://www.gitignore.io/?templates=python,vagrant
 
+## Django Heroku ##
+/staticfiles 
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
